# Benstoy

./: .gitignore  flake.nix
.github/workflows/: rust.yml
core/: Cargo.toml
core/.cargo/: config.toml
core/src/: main.rs
make_img/: Cargo.toml
make_img/src/: disk.rs  format_image.rs  lib.rs  main.rs  partition.rs
make_img/src/compile_source/: cargo_command.rs  cargo_library.rs  mod.rs
make_img/src/format/: exfat.rs  fat32.rs  mod.rs
